# zoombit-microbit-lllm

./: .gitignore  README.md  codes.md  disasm_microbit.py  functions_report.txt  microbit-rekabit-robot.filtered.hex  microbit-rekabit-robot.hex  microbit-rekabit-robot_disasm.asm  microbit-rekabit-robot_seg00_disasm.asm  microbit-rekabit-robot_seg01_disasm.asm  microbit-rekabit-robot_seg02_disasm.asm  microbit-rekabit-robot_seg03_disasm.asm  microbit-rekabit-robot_seg04_disasm.asm  microbit-rekabit-robot_seg05_disasm.asm  microbit-rekabit-robot_segments.txt  package-lock.json  package.json  reset_vector.txt  strings_report.txt
mcp-codes-server/: README.md  pyproject.toml  requirements.txt
mcp-codes-server/src/mcp_codes_server/: __init__.py  server.py
pxt-zoombit/: .gitignore  README.md  main.ts  package-lock.json  pxt.json  test.ts
pxt-zoombit/tools/: .env.sample  package-lock.json  package.json  server.js  server.ts  tsconfig.json
script/: stop.ps1  stop.sh  strings_funcs_report.py
scripts/: pdf_to_png_converter.py  start-all.ps1  start-all.sh  start-desktop.ps1  start-mcp.ps1  start-tools.ps1  stop-desktop.ps1  stop-mcp.ps1  stop-tools.ps1  stop.ps1  stop.sh
zoombit-desktop/: README.md  angular.json  package-lock.json  package.json
zoombit-desktop/electron/: main.js  preload.js
zoombit-desktop/src/: index.html  styles.css
zoombit-desktop/src/app/: app.component.html  app.component.spec.ts  app.component.ts
