[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-codes-server"
version = "0.1.0"
description = "Minimal MCP-like stdio server that reads codes.md"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mcp", "microbit", "markdown"]
dependencies = []

[project.scripts]
mcp-codes-server = "mcp_codes_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
